[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
wandb = { path = "/Users/chance.an/develop/wandb/experimental/rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
